--- a/index.html
+++ b/index.html
@@ -271,9 +271,9 @@ document.addEventListener('DOMContentLoaded', function() {
                 "React Native", 
                 "HTML", 
                 "MS Office Instructor",
-                "Cybersecurity Essentials (LFC108)",
-                "Introduction to Linux (LFS101)",
-                "Open Source and the 5G Transition (LFS111)"
+                "Cybersecurity Essentials",
+                "Introduction to Linux",
+                "Open Source and the 5G Transition"
             ]
         },
         "Business Management Certifications": {
